# buffer-insert

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: fanout.bufins  fanout.lib  fanout.v
src/: engine.rs  job.rs  lib.rs  main.rs
tests/: bufins.rs
