[package]
name = "vyges-buffer-insert"
version = "0.1.12"
edition = "2021"
description = "STA-driven buffer insertion: split high-fanout / over-transition nets to fix slew and timing. Netlist in / netlist out."
license = "Apache-2.0"
authors = ["Vyges <https://vyges.com/contact>"]
homepage = "https://vyges.com"
repository = "https://github.com/vyges-tools/buffer-insert"

# One dependency: the timing engine. vyges-sta-si re-exports the shared vyges-loom readers +
# design model, so buffer-insert needs no other deps.
[dependencies]
vyges-sta-si = { git = "https://github.com/vyges-tools/sta-si", branch = "main" }
vyges-events = { git = "https://github.com/vyges-tools/events", branch = "main", default-features = false }

[[bin]]
name = "vyges-buffer-insert"
path = "src/main.rs"

[lib]
name = "vyges_buffer_insert"
path = "src/lib.rs"
